--- a/HotelReservation/HotelReservation/Views/Menu/Create.cshtml
+++ b/HotelReservation/HotelReservation/Views/Menu/Create.cshtml
@@ -34,8 +34,8 @@
 
                     </div>
                     <div class="form-group">
-                         @Html.LabelFor(m => m.CatgeoryId)
-                         @Html.DropDownListFor(m => m.CatgeoryId, new SelectList(ViewBag.Categories, "Id", "name"), new { @class = "form-control" })
+                         @Html.LabelFor(m => m.CategoryId)
+                         @Html.DropDownListFor(m => m.CategoryId, new SelectList(ViewBag.Categories, "Id", "name"), new { @class = "form-control" })
 
                      </div>
 
