--- a/HotelReservation/HotelReservation/Views/Shared/_Layout.cshtml
+++ b/HotelReservation/HotelReservation/Views/Shared/_Layout.cshtml
@@ -131,18 +131,12 @@
                     <li class="active"><a href="@Url.Action("index","home")"><i class="fas fa-home"></i><span>Dashboard</span></a></li>
                     <li class="g_heading">Create New</li>
                     <li>
-                        <a href="javascript:void(0)" class="has-arrow"><i class="fas fa-bed"></i><span>Room</span></a>
-                        <ul>
-                            <li><a class="dropdown-item" href="@Url.Action("index","room")">View</a></li>
-                            <li><a class="dropdown-item" href="@Url.Action("create","room")">Create</a></li>
-                        </ul>
+                        <a href="@Url.Action("index","room")"><i class="fas fa-bed"></i><span>Room</span></a>
+                        
                     </li>
                     <li>
-                        <a href="javascript:void(0)" class="has-arrow"><i class="fas fa-user-tie"></i><span>Customer</span></a>
-                        <ul>
-                            <li><a class="dropdown-item" href="@Url.Action("index","customer")">View</a></li>
-                            <li><a class="dropdown-item" href="@Url.Action("create","customer")">Create</a></li>
-                        </ul>
+                        <a href="@Url.Action("index","customer")"><i class="fas fa-user-tie"></i><span>Customer</span></a>
+                        
                     </li>
                     <li>
                         <a href="javascript:void(0)" class="has-arrow">
@@ -153,18 +147,12 @@
                         </a>
                         <ul>
                             <li>
-                                <a href="javascript:void(0)" class="has-arrow">Category</a>
-                                <ul>
-                                    <li><a class="dropdown-item" href="@Url.Action("index","category")">View</a></li>
-                                    <li><a class="dropdown-item" href="@Url.Action("create","category")">Create</a></li>
-                                </ul>
+                                <a href="@Url.Action("index","category")">Category</a>
+                             
                             </li>
                             <li>
-                                <a class="has-arrow" href="javascript:void(0)">Menu</a>
-                                <ul>
-                                    <li><a class="dropdown-item" href="@Url.Action("index","menu")">View</a></li>
-                                    <li><a class="dropdown-item" href="@Url.Action("create","menu")">Create</a></li>
-                                </ul>
+                                <a href="@Url.Action("index","menu")">Menu</a>
+                                
                             </li>
                         </ul>
                     </li>
@@ -172,31 +160,14 @@
 
                     <li class="g_heading">Users</li>
                     <li>
-                        <a href="javascript:void(0)" class="has-arrow"><i class="fas fa-user"></i><span>Admin</span></a>
-                        <ul>
-                            <li><a class="dropdown-item" href="@Url.Action("index","admin")">View</a></li>
-                            <li><a class="dropdown-item" href="@Url.Action("create","admin")">Create</a></li>
-                        </ul>
+                        <a href="@Url.Action("index","admin")"><i class="fas fa-user"></i><span>Admin</span></a>
+                       
                     </li>
                     <li>
-                        <a href="javascript:void(0)" class="has-arrow"><i class="fas fa-users-cog"></i><span>Group</span></a>
-                        <ul>
-                            <li><a class="dropdown-item" href="@Url.Action("index","group")">View</a></li>
-                            <li><a class="dropdown-item" href="@Url.Action("create","group")">Create</a></li>
-                        </ul>
+                        <a href="@Url.Action("index","group")"><i class="fas fa-users-cog"></i><span>Group</span></a>
+                       
                     </li>
 
-                    <li>
-                        <a href="javascript:void(0)" class="has-arrow"><i class="ti-na"></i><span>Error Pages</span></a>
-                        <ul>
-                            <li><a class="dropdown-item" href="error-400.html">400 error</a></li>
-                            <li><a class="dropdown-item" href="error-401.html">401 error</a></li>
-                            <li><a class="dropdown-item" href="error-403.html">403 error</a></li>
-                            <li><a class="dropdown-item" href="error-404.html">404 error</a></li>
-                            <li><a class="dropdown-item" href="error-500.html">500 error</a></li>
-                            <li><a class="dropdown-item" href="error-503.html">503 error</a></li>
-                        </ul>
-                    </li>
                 </ul>
             </nav>
         </div>
