--- a/HotelReservation/HotelReservation/Views/Shared/_Layout.cshtml
+++ b/HotelReservation/HotelReservation/Views/Shared/_Layout.cshtml
@@ -128,7 +128,7 @@
                 </div>
                 <ul id="main-menu" class="metismenu">
                     <li class="g_heading">Main</li>
-                    <li class="active"><a href="@Url.Action("index","home")"><i class="fas fa-home"></i><span>Dashboard</span></a></li>
+                    <li class="active"><a><i class="fas fa-home"></i><span>Dashboard</span></a></li>
                     <li class="g_heading">Create New</li>
                     <li>
                         <a href="@Url.Action("index","room")"><i class="fas fa-bed"></i><span>Room</span></a>
