--- a/HotelReservation/HotelReservation/Views/Category/Create.cshtml
+++ b/HotelReservation/HotelReservation/Views/Category/Create.cshtml
@@ -21,8 +21,9 @@
                 <form method="post">
 
                     <div class="form-group">
-                        @Html.LabelFor(m=>m.Name)
+                        @Html.LabelFor(m => m.Name)
                         @Html.TextBoxFor(m => m.Name, null, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.Name, "", new { @class = "text-danger" })
                     </div>
                     <div class="form-row">
                         <div class="col-md-12">
