--- a/HotelReservation/HotelReservation/Views/Customer/Edit.cshtml
+++ b/HotelReservation/HotelReservation/Views/Customer/Edit.cshtml
@@ -22,14 +22,17 @@
                 <div class="form-group">
                     @Html.LabelFor(m => m.FirstName)
                     @Html.TextBoxFor(m => m.FirstName, null, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "text-danger" })
                 </div>
                 <div class="form-group">
                     @Html.LabelFor(m => m.LastName)
                     @Html.TextBoxFor(m => m.LastName, null, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.LastName, "", new { @class = "text-danger" })
                 </div>
                 <div class="form-group">
                     @Html.LabelFor(m => m.CustomerTypeId)
                     @Html.DropDownListFor(m => m.CustomerTypeId, new SelectList(ViewBag.CustomerTypes, "id", "name"), new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.CustomerTypeId, "", new { @class = "text-danger" })
                 </div>
                 <div class="form-row">
                     <div class="col-md-12">
