--- a/HotelReservation/HotelReservation/Views/Group/Edit.cshtml
+++ b/HotelReservation/HotelReservation/Views/Group/Edit.cshtml
@@ -22,6 +22,7 @@
                     <div class="form-group">
                         @Html.LabelFor(m => m.Name)
                         @Html.TextBoxFor(m => m.Name, null, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.Name, "", new { @class = "text-danger" })
                     </div>
                     <div class="form-row">
                         <div class="col-md-12">
