--- a/HotelReservation/HotelReservation/Views/Shared/_Layout.cshtml
+++ b/HotelReservation/HotelReservation/Views/Shared/_Layout.cshtml
@@ -41,51 +41,12 @@
                 <ul class="navbar-nav mr-auto hidden-xs">
                     <li class="nav-item page-header">
                         <ul class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="index.html"><i class="fa fa-home"></i></a></li>
-                            <li class="breadcrumb-item active">Dashboard</li>
+                            <li class="breadcrumb-item"><a href="index.html"><i class="fas fa-umbrella-beach"></i></a></li>
+                            <li class="breadcrumb-item active">@ViewContext.RouteData.Values["Controller"].ToString()</li>
                         </ul>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link nav-link-icon" href="#" id="navbar_1_dropdown_2" role="button"
-                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="fa fa-bell"></i>
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-right dropdown-menu-xl py-0">
-                            <div class="py-3 px-3">
-                                <h5 class="heading h6 mb-0">
-                                    Notifications <span class="badge badge-pill badge-primary text-uppercase float-right">3</span>
-                                </h5>
-                            </div>
-                            <div class="list-group">
-                                <a href="#" class="list-group-item list-group-item-action d-flex">
-                                    <div class="list-group-img"><span class="avatar bg-purple">JD</span></div>
-                                    <div class="list-group-content">
-                                        <div class="list-group-heading">Johnyy Depp <small>10:05 PM</small></div>
-                                        <p class="text-sm">Lorem ipsum dolor consectetur adipiscing eiusmod tempor</p>
-                                    </div>
-                                </a>
-                                <a href="#" class="list-group-item list-group-item-action d-flex">
-                                    <div class="list-group-img"><span class="avatar bg-pink">TC</span></div>
-                                    <div class="list-group-content">
-                                        <div class="list-group-heading">Tom Cruise <small>10:05 PM</small></div>
-                                        <p class="text-sm">Lorem ipsum dolor sit amet consectetur eiusmod tempor</p>
-                                    </div>
-                                </a>
-                                <a href="#" class="list-group-item list-group-item-action d-flex">
-                                    <div class="list-group-img"><span class="avatar bg-blue">WS</span></div>
-                                    <div class="list-group-content">
-                                        <div class="list-group-heading">Will Smith <small>10:05 PM</small></div>
-                                        <p class="text-sm">Lorem sit amet consectetur adipiscing eiusmod tempor</p>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="py-3 text-center">
-                                <a href="#" class="link link-sm link--style-3">View all notifications</a>
-                            </div>
-                        </div>
-                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link nav-link-icon" href="#" id="navbar_1_dropdown_3" role="button"
                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -94,15 +55,7 @@
                         <div class="dropdown-menu dropdown-menu-right">
                             <h6 class="dropdown-header">User menu</h6>
                             <a class="dropdown-item" href="#"><i class="fa fa-user text-primary"></i>My Profile</a>
-                            <a class="dropdown-item" href="#">
-                                <span class="float-right badge badge-success">$50K</span><i class="fa fa-briefcase text-primary"></i>My Balance
-                            </a>
-                            <a class="dropdown-item" href="#">
-                                <span class="float-right badge badge-warning">4</span><i class="fa fa-envelope text-primary"></i>Inbox
-                            </a>
-                            <a class="dropdown-item" href="#"><i class="fa fa-cog text-primary"></i>Settings</a>
-                            <div class="dropdown-divider" role="presentation"></div>
-                            <a class="dropdown-item" href="#"><i class="fa fa-sign-out text-primary"></i>Sign out</a>
+                            <a class="dropdown-item" href="@Url.Action("index", "login")"><i class="fa fa-sign-out-alt text-primary"></i>Sign out</a>
                         </div>
                     </li>
                 </ul>
@@ -128,17 +81,14 @@
                 </div>
                 <ul id="main-menu" class="metismenu">
                     <li class="g_heading">Main</li>
-                    <li class="active"><a><i class="fas fa-home"></i><span>Dashboard</span></a></li>
+                    <li class="@(ViewContext.RouteData.Values["Controller"].ToString() + ViewContext.RouteData.Values["Action"].ToString() == "HomeIndex" ? "active" : "")"><a href="@Url.Action("index","Home")"><i class="fas fa-home"></i><span>Dashboard</span></a></li>
                     <li class="g_heading">Create New</li>
-                    <li>
-                        <a href="@Url.Action("index","room")"><i class="fas fa-bed"></i><span>Room</span></a>
-                        
-                    </li>
-                    <li>
-                        <a href="@Url.Action("index","customer")"><i class="fas fa-user-tie"></i><span>Customer</span></a>
-                        
-                    </li>
-                    <li>
+                    <li class="@(ViewContext.RouteData.Values["Controller"].ToString() + ViewContext.RouteData.Values["Action"].ToString() == "RoomIndex" ? "active" : "")"><a href="@Url.Action("index","Room")"><i class="fas fa-bed"></i><span>Room</span></a>
+</li>
+                    <li class="@(ViewContext.RouteData.Values["Controller"].ToString() + ViewContext.RouteData.Values["Action"].ToString() == "CustomerIndex" ? "active" : "")"><a href="@Url.Action("index","Customer")"><i class="fas fa-user-tie"></i><span>Customer</span></a>
+</li>
+                    <li class="@(ViewContext.RouteData.Values["Controller"].ToString() + ViewContext.RouteData.Values["Action"].ToString() == "CategoryIndex" || ViewContext.RouteData.Values["Controller"].ToString() +
+                         ViewContext.RouteData.Values["Action"].ToString() == "MenuIndex"? "active" : "")">
                         <a href="javascript:void(0)" class="has-arrow">
                             <i class="fas fa-utensils"></i><span>
                                 Food &
@@ -146,25 +96,25 @@
                             </span>
                         </a>
                         <ul>
-                            <li>
-                                <a href="@Url.Action("index","category")">Category</a>
+                            <li class="@(ViewContext.RouteData.Values["Controller"].ToString() + ViewContext.RouteData.Values["Action"].ToString() == "CategoryIndex" ? "active" : "")">
+                                <a href="@Url.Action("index","Category")">Category</a>
                              
                             </li>
-                            <li>
-                                <a href="@Url.Action("index","menu")">Menu</a>
+                            <li class="@(ViewContext.RouteData.Values["Controller"].ToString() + ViewContext.RouteData.Values["Action"].ToString() == "MenuIndex" ? "active" : "")">
+                                <a href="@Url.Action("index","Menu")">Menu</a>
                                 
                             </li>
                         </ul>
                     </li>
-                    <li><a href="@Url.Action("index","booking")"><i class="fas fa-book-open"></i><span>Booking</span></a></li>
+                    <li class="@(ViewContext.RouteData.Values["Controller"].ToString() + ViewContext.RouteData.Values["Action"].ToString() == "BookingIndex" ? "active" : "")"><a href="@Url.Action("index","Booking")"><i class="fas fa-book-open"></i><span>Booking</span></a></li>
 
                     <li class="g_heading">Users</li>
-                    <li>
-                        <a href="@Url.Action("index","admin")"><i class="fas fa-user"></i><span>Admin</span></a>
+                    <li class="@(ViewContext.RouteData.Values["Controller"].ToString() + ViewContext.RouteData.Values["Action"].ToString() == "AdminIndex" ? "active" : "")">
+                        <a href="@Url.Action("index","Admin")"><i class="fas fa-user"></i><span>Admin</span></a>
                        
                     </li>
-                    <li>
-                        <a href="@Url.Action("index","group")"><i class="fas fa-users-cog"></i><span>Group</span></a>
+                    <li class="@(ViewContext.RouteData.Values["Controller"].ToString() + ViewContext.RouteData.Values["Action"].ToString() == "GroupIndex" ? "active" : "")">
+                        <a href="@Url.Action("index","Group")"><i class="fas fa-users-cog"></i><span>Group</span></a>
                        
                     </li>
 
